# deutsch-haeufig

./: .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  REPORT.md  REQS.md  ROADMAP.md  pyproject.toml  scrape_vocabeo.py
.github/workflows/: ci.yml
src/deutsch_haufig/: __init__.py  backup.py  config.py  db.py  main.py  models.py  schemas.py  templating.py
src/deutsch_haufig/dialogue/: __init__.py  openai_provider.py
src/deutsch_haufig/i18n/: __init__.py  de.json  en.json  tr.json
src/deutsch_haufig/ingest/: __init__.py  b2.py  collocations.py  depth.py  dwds.py  goethe.py  pipeline.py  verbformen.py  vocabeo.py
src/deutsch_haufig/routes/: __init__.py  auth.py  browse.py  i18n.py  learn.py  stats.py  word.py
src/deutsch_haufig/scheduler/: __init__.py
src/deutsch_haufig/templates/: auth_error.html  auth_login.html  auth_sent.html  base.html  browse.html  index.html  learn.html  stats.html  word.html
tests/: test_browse_route.py  test_dialogue.py  test_ingest_b2.py  test_ingest_dwds.py  test_ingest_dwds_corpus.py  test_ingest_dwds_frequency.py  test_ingest_goethe.py  test_ingest_pipeline.py  test_ingest_vocabeo.py  test_learn_route.py  test_m0_skeleton.py  test_scheduler.py
tests/fixtures/dwds/: noun_auto.html  noun_buch.html  noun_haus.html  noun_stadt.html  particle_ab.html  particle_doch.html  verb_geben.html  verb_haben.html  verb_sein.html  verb_werden.html
tests/fixtures/goethe/: a1_sample.csv  a2_sample.csv  b1_sample.csv
tests/fixtures/vocabeo/: adj_a1.html  adjectives.html  colors.html  noun_der.html  noun_die.html  nouns.html  verbs.html  (+3 more)
(+8 files in other folders)
