[project]
name = "deutsch-haufig"
version = "0.0.1"
description = "Web app to learn the most frequent German words with monolingual definitions, rich examples, and FSRS spaced repetition."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "deutsch-haufig contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "httpx>=0.27",
    "selectolax>=0.3.27",
    "fsrs>=4.0",
    "python-multipart>=0.0.20",
    "playwright>=1.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
web = "deutsch_haufig.main:run"
ingest = "deutsch_haufig.ingest.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deutsch_haufig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["deutsch_haufig"]
